added Theoretical Learning Algorithm

--- a/a2.md
+++ b/a2.md
@@ -28,7 +28,7 @@ Therefore, based on this, we can define that:
 A^1 =  \varphi \left ( \begin{bmatrix} w_{0[1]}^1 & w_{1[1]}^1 & \dots & w_{n[1]}^1 \\ w_{0[2]}^1 & w_{1[2]}^1 & \dots & w_{n[2]}^1 \\ \vdots & \vdots & \ddots & \vdots \\ w_{0[k]}^1 & w_{1[k]}^1 & \dots & w_{n[k]}^1\end{bmatrix} \begin{bmatrix} x_0 \\ x_1 \\ \vdots \\ x_n \end{bmatrix} \right ) = \varphi(W^1 \cdot X^{[b]})
 \]
 
-We define \(W^1\) as a matrix containing all the weights of the first layer, where \(W^1 \in \mathbb{R}^{(n+1) \times k}\). Note that, in the matrix multiplication represented above, we have the dimensions of \(W^1\) as \(k \times (n+1)\) and the dimensions of \(X\) as \((n+1) \times 1\), allowing the operation. In the dot product \(W^1 \cdot X^{[b]}\), the theorem of this operation with the proper dimensions of the vectors is intrinsic.
+We define \(W^1\) as a matrix containing all the weights of the first layer, where \(W^1 \in \mathbb{R}^{(n+1) \times k}\). Note that, in the matrix multiplication represented above, we have the dimensions of \(W^{1[t]}\) as \(k \times (n+1)\) and the dimensions of \(X\) as \((n+1) \times 1\), allowing the operation. In the dot product \(W^1 \cdot X^{[b]}\), the theorem of this operation with the proper dimensions of the vectors is intrinsic.
 
 Thus, this allows us to state that:
 
