refactor the docs

--- a/docs/ANN/a1.md
+++ b/docs/ANN/a1.md
@@ -31,7 +31,7 @@ z = \begin{bmatrix} w_0 = b & w_1 & w_2 & \dots &  w_n \end{bmatrix} \cdot \begi
 
 In the graphical representation below, we illustrate the processing of the $n$-inputs $x_i$ through the respective weights $w_i$, resulting in $z$. This is denoted as the _transfer function_.
 
-<img src="/transfer_function_1.svg" alt="The perceptron"/>
+<img src="/img/transfer_function_1.svg" alt="The perceptron"/>
 
 ### Activation Function $\varphi(z)$
 The activation function is responsible for introducing nonlinearity into the system. Therefore, it always receives the value of $z$. The activation function can be defined in various forms such as sigmoid, hyperbolic tangent, rectified linear unit, etc. In this topic, we will not focus on the behavior of each function yet but rather on how the system is structured with it. Thus, for only one layer of neurons with a single neuron, we have $\varphi: \mathbb{R} \rightarrow \Theta $ such that \(\Theta \) represents any set of images depending on the function \(\varphi\):
@@ -42,7 +42,7 @@ The activation function is responsible for introducing nonlinearity into the sys
 
 Note that we can represent the activation function as $\varphi(z) = a$. In this case, as we are constructing a single processing layer with only one neuron, we have $a=y$. Thus, we can represent it as follows:
 
-<img src="/activation_function_2.svg" alt="Single Functional Neuron"/>
+<img src="/img/activation_function_2.svg" alt="Single Functional Neuron"/>
 
 So, from the perspective of a perceptron, we can define the function $f(X^{[b]}) = y$, where $f: \mathbb{R}^{n+1} \rightarrow \mathbb{\Theta}$ if the activation function \(\varphi\) is used, otherwise \(f(X^{[b]}) = y\) where \(f: \mathbb{R}^{n+1} \rightarrow \mathbb{R}\):
 
