--- a/docs/ANN/a3.md
+++ b/docs/ANN/a3.md
@@ -16,7 +16,7 @@ f^L(A^{L-1[b]}) = \varphi(W^L \cdot A^{L-1[b]}), \quad f^L: \Theta^{k_{L-1}[b]} 
 
 We can visualize the generalization in the representation below. Notice that throughout the development, we always use the activation function in all neurons. It is also possible, in various cases, to use the ANN without the activation function, but we will not address this format.
 
-<img src="/MLP.svg" alt="MLP Input and Hidden Layers"/>
+<img src="/img/MLP.svg" alt="MLP Input and Hidden Layers"/>
 
 Now, for the last layer \(A^{L}\), referred to as the output of our multilayer perceptron, we can define \(A^L = Y\). The dimension of \(A^L\), which is \(k_L\), will be denoted by \(m\). Therefore, \(Y \in \Theta^m\). Based on these truths, we have:
 
