--- a/docs/ANN/a5.md
+++ b/docs/ANN/a5.md
@@ -20,7 +20,7 @@ y_i = \varphi(\varpi_i^L \cdot A^{L-1[b]}), \quad \varpi_i^L = \begin{bmatrix} w
 
 To elucidate the definition of the output \(y_i\), we have the representation below:
 
-<img src="/output_i_definition.svg" alt="Output y_i definition"/>
+<img src="/img/output_i_definition.svg" alt="Output y_i definition"/>
 
 Notice that in the vector \(A^{L-1[b]}\), we have the dimension \(k\) referring to layer \(L-1\) with the additional bias \(a_0^{L-1}\), denoted by \([b]\). Thus, the dimension is denoted by \(k_{L-1}[b]\). Similarly, the dimension of \(\varpi_i^L\) where we know that \(\forall a_i^{L-1} \exists w_i^{L}\) such that \(i = 0, \dots, k_{L-1}[b]\).
 
