--- a/docs/ANN/a6.md
+++ b/docs/ANN/a6.md
@@ -66,7 +66,7 @@ Para atualizar os pesos \(\varpi_h^{L-1}\) onde \(h = 1, \dots, k_{L-1}\):
 
 Para facilitar a compreensão, podemos visualizar graficamente como cada termo ser relaciona:
 
-<img src="/MLP_backpropagation.svg" alt="Output y_i definition"/>
+<img src="/img/MLP_backpropagation.svg" alt="Output y_i definition"/>
 
 Isso conclui que, diferente dos outputs da camada \(L\) onde temos um valor de referência \(\hat{y_i}\) para cada \(y_i\) para calcular o erro, nos outputs da camada \(L-1\) não temos um valor de referência \(\hat{a}_h^{L-1}\) para calcular o erro de \(a_h^L\). Como base nisso, o que substitui esse processo é a retropropagação, onde o valor de referência do erro é \(\sum_{i=1}^{m}\delta_i^L w_{h[i]}^L\). Isso é propriamente a média dos "erros" da camada \(L\) multiplicado por seu respectivo peso \(w_{h}^L\). 
 
